Sun Dec 13 13:19:39 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/cuts_lib.mpb:

	  . Added a new base project.

        * cuts/Event_Handler_T.h:

	  . Fixed build error.

        * etc/emulab/generate-dance-nodemap.sh:

          . Updated the to the latest version of DAnCE.
	
Fri Dec 11 17:00:57 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * examples/cuts/utils/testing/logging/run.config:

          . Rename of the file below.

        * examples/cuts/utils/testing/logging/cutsnode.config:

          Removed this file.

Fri Dec 11 16:52:26 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * examples/cuts/utils/node/DAnCE/dance.cutsnode.config:

          . Update the no-namingservice environment.

Fri Dec 11 16:47:56 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/utils/node/client/NodeDaemon_Client_App.inl:
        * cuts/utils/node/client/NodeDaemon_Client_App.cpp:

          . Bug fix where the --get-active-env command-line options was
            always enabled.

          . Fixed errors in the displayed help.

        * examples/cuts/utils/node/DAnCE/dance.cutsnode.config:

          . Added another environment for showing how to specify
            multiple environments that can be swapped.

Mon Nov 30 05:35:27 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/utils/testing/svcs/validation/TE_Score_App.cpp:

          . Bug fix where the final grade was displayed decimal and not
            a percentage.

        * cuts/utils/testing/svcs/validation/TE_Score_App_Options.h:

          . Added a precision option to the application options, but
            have not tied it into the command-line parameters.

        * examples/cuts/utils/validation/README:
        * examples/cuts/utils/validation/example.data:
        * examples/cuts/utils/validation/example.datagraph:
        * examples/cuts/utils/validation/example.validation:
